--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root{
-    /* Paleta clássica (dark + roxo #9f5bff) */
     --bg:#0b0b13; --panel:#111122; --card:#151527; --stroke:#23243a;
-    --text:#eef2ff; --muted:#9aa3b2;
-    --neon:#9f5bff; --neon2:#00b3ff;
+    --text:#eef2ff; --muted:#9aa3b2; --neon:#9f5bff; --neon2:#00b3ff;
     --ok:#22c55e; --warn:#f59e0b; --bad:#ef4444; --chip:#151536;
     --radius:16px; --shadow:0 10px 30px rgba(0,0,0,.35);
   }
@@ -26,106 +24,38 @@
   .wrap{max-width:1200px;margin:28px auto;padding:0 16px}
   header{display:flex;align-items:center;justify-content:space-between;margin-bottom:18px}
   .brand{display:flex;align-items:center;gap:12px}
-  .logo{
-    width:42px;height:42px;border-radius:12px;
-    background:conic-gradient(from 210deg at 50% 50%, var(--neon), var(--neon2), var(--neon));
-    box-shadow:0 6px 18px rgba(159,91,255,.35), inset 0 0 12px rgba(0,0,0,.4);
-  }
+  .logo{width:42px;height:42px;border-radius:12px;background:conic-gradient(from 210deg at 50% 50%, var(--neon), var(--neon2), var(--neon));box-shadow:0 6px 18px rgba(159,91,255,.35), inset 0 0 12px rgba(0,0,0,.4)}
   .brand h1{font-size:20px;margin:0;font-weight:800;letter-spacing:.2px}
-  .status-bar{
-    display:flex;gap:10px;flex-wrap:wrap;align-items:center
-  }
-  .chip{
-    background:linear-gradient(180deg, #171a2b, #0f1120);
-    border:1px solid var(--stroke); border-radius:999px; padding:8px 12px; display:inline-flex; gap:8px; align-items:center;
-    color:#d6dbff; box-shadow:inset 0 0 0 1px rgba(255,255,255,.02);
-  }
-  .chip .dot{width:8px;height:8px;border-radius:50%}
-  .dot.ok{background:var(--ok)} .dot.warn{background:var(--warn)} .dot.bad{background:var(--bad)}
-
+  .status-bar{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+  .chip{background:linear-gradient(180deg, #171a2b, #0f1120);border:1px solid var(--stroke); border-radius:999px; padding:8px 12px; display:inline-flex; gap:8px; align-items:center;color:#d6dbff}
+  .chip .dot{width:8px;height:8px;border-radius:50%}.dot.ok{background:var(--ok)}.dot.warn{background:var(--warn)}.dot.bad{background:var(--bad)}
   main{display:grid;gap:16px;grid-template-columns:1.2fr 1fr}
   @media (max-width:980px){ main{grid-template-columns:1fr} }
-
-  .card{
-    background:linear-gradient(180deg, #151527, #121227);
-    border:1px solid var(--stroke); border-radius:var(--radius); padding:16px; box-shadow:var(--shadow)
-  }
+  .card{background:linear-gradient(180deg, #151527, #121227);border:1px solid var(--stroke); border-radius:var(--radius); padding:16px; box-shadow:var(--shadow)}
   .card h2{margin:0 0 12px 0;font-size:15px;letter-spacing:.3px;color:#e6e9ff}
-  .row{display:flex;gap:12px;flex-wrap:wrap}
-  .col{flex:1 1 260px}
-
-  /* Últimas bolas */
-  .grid{
-    display:grid;gap:10px;grid-template-columns:repeat(10,1fr);
-    border-radius:14px;border:1px dashed var(--stroke);padding:10px;
-    background:linear-gradient(180deg,#111326,#0c0f1f);
-  }
-  .ball{
-    height:34px;border-radius:10px;border:1px solid var(--stroke);
-    display:flex;align-items:center;justify-content:center;font-weight:800;
-    background:linear-gradient(180deg,#0e1123,#0a0d1a);
-    text-shadow:0 0 14px rgba(159,91,255,.35);
-  }
-  .b-red{color:#ff7a7a}
-  .b-black{color:#cbd5e1}
-  .b-white{
-    color:#9f5bff;border:1px solid rgba(159,91,255,.6);
-    box-shadow:0 0 18px rgba(159,91,255,.35), inset 0 0 10px rgba(159,91,255,.15);
-  }
-
+  .row{display:flex;gap:12px;flex-wrap:wrap}.col{flex:1 1 260px}
+  .grid{display:grid;gap:10px;grid-template-columns:repeat(10,1fr);border-radius:14px;border:1px dashed var(--stroke);padding:10px;background:linear-gradient(180deg,#111326,#0c0f1f)}
+  .ball{height:34px;border-radius:10px;border:1px solid var(--stroke);display:flex;align-items:center;justify-content:center;font-weight:800;background:linear-gradient(180deg,#0e1123,#0a0d1a);text-shadow:0 0 14px rgba(159,91,255,.35)}
+  .b-red{color:#ff7a7a}.b-black{color:#cbd5e1}
+  .b-white{color:#9f5bff;border:1px solid rgba(159,91,255,.6);box-shadow:0 0 18px rgba(159,91,255,.35), inset 0 0 10px rgba(159,91,255,.15)}
   .progress{height:12px;background:#0c0f1f;border:1px solid var(--stroke);border-radius:999px;overflow:hidden}
-  .progress>i{display:block;height:100%;width:0%;
-    background:linear-gradient(90deg, var(--neon), var(--neon2));
-    box-shadow:0 0 14px rgba(159,91,255,.45)
-  }
+  .progress>i{display:block;height:100%;width:0%;background:linear-gradient(90deg, var(--neon), var(--neon2));box-shadow:0 0 14px rgba(159,91,255,.45)}
   .tag{font-size:12px;color:var(--muted)}
-
-  table{width:100%;border-collapse:collapse}
-  th,td{padding:10px;border-bottom:1px solid var(--stroke);font-size:13px}
-  th{text-align:left;color:#b9c3ff}
-  tr:last-child td{border-bottom:none}
-  .pill{
-    display:inline-flex;align-items:center;padding:4px 10px;border-radius:999px;background:#0e1021;border:1px solid var(--stroke);gap:6px;font-size:12px
-  }
-
-  input[type="number"],select,button{
-    width:100%;padding:10px 12px;border-radius:12px;border:1px solid var(--stroke);
-    background:#0f1226;color:#e7eaff;font:inherit
-  }
-  button{
-    cursor:pointer;font-weight:800;border:0; letter-spacing:.3px;
-    background:linear-gradient(135deg, rgba(159,91,255,.95), rgba(0,179,255,.9));
-    color:#fff; box-shadow:0 10px 30px rgba(0,179,255,.18), 0 0 0 1px rgba(255,255,255,.04) inset
-  }
-  button.ghost{
-    background:#0e1021;color:#e7eaff;border:1px solid var(--stroke);box-shadow:none
-  }
-
+  table{width:100%;border-collapse:collapse} th,td{padding:10px;border-bottom:1px solid var(--stroke);font-size:13px} th{text-align:left;color:#b9c3ff} tr:last-child td{border-bottom:none}
+  .pill{display:inline-flex;align-items:center;padding:4px 10px;border-radius:999px;background:#0e1021;border:1px solid var(--stroke);gap:6px;font-size:12px}
+  input[type="number"],input[type="text"],select,button{width:100%;padding:10px 12px;border-radius:12px;border:1px solid var(--stroke);background:#0f1226;color:#e7eaff;font:inherit}
+  button{cursor:pointer;font-weight:800;border:0; letter-spacing:.3px;background:linear-gradient(135deg, rgba(159,91,255,.95), rgba(0,179,255,.9));color:#fff; box-shadow:0 10px 30px rgba(0,179,255,.18), 0 0 0 1px rgba(255,255,255,.04) inset}
+  button.ghost{background:#0e1021;color:#e7eaff;border:1px solid var(--stroke);box-shadow:none}
   .kpis{display:grid;grid-template-columns:repeat(4,1fr);gap:12px}
   @media (max-width:700px){ .kpis{grid-template-columns:repeat(2,1fr)} }
-  .kpi{
-    background:linear-gradient(180deg,#12132a,#0d1022);
-    border:1px solid var(--stroke);border-radius:14px;padding:14px;box-shadow:var(--shadow)
-  }
-  .kpi .v{font-size:22px;font-weight:900}
-  .kpi .l{font-size:12px;color:var(--muted)}
-  .glow{
-    position:relative;
-  }
-  .glow:after{
-    content:"";position:absolute;inset:-1px;border-radius:inherit;
-    background:linear-gradient(135deg, rgba(159,91,255,.25), rgba(0,179,255,.25));
-    filter:blur(16px);opacity:.45;z-index:-1
-  }
+  .kpi{background:linear-gradient(180deg,#12132a,#0d1022);border:1px solid var(--stroke);border-radius:14px;padding:14px;box-shadow:var(--shadow)}
+  .kpi .v{font-size:22px;font-weight:900}.kpi .l{font-size:12px;color:var(--muted)}
 </style>
 </head>
 <body>
 <div class="wrap">
   <header>
-    <div class="brand">
-      <div class="logo glow"></div>
-      <h1>Spectra X — Neural Trader (Classic)</h1>
-    </div>
+    <div class="brand"><div class="logo"></div><h1>Spectra X — Neural Trader (Classic)</h1></div>
     <div class="status-bar">
       <span class="chip"><span class="dot ok"></span> API: <b id="apiStatus">Online</b></span>
       <span class="chip">Modo: <b id="modeLabel">hybrid</b></span>
@@ -136,29 +66,15 @@
   </header>
 
   <main>
-    <!-- COL ESQUERDA -->
+    <!-- ESQUERDA -->
     <section class="card col">
       <h2>Últimas Rodadas & Probabilidades</h2>
       <div class="grid" id="lastGrid"></div>
-
       <div style="margin-top:12px" class="row">
-        <div class="col">
-          <div class="pill">Red prob</div>
-          <div class="progress"><i id="pRed"></i></div>
-          <span class="tag" id="pRedTxt">0%</span>
-        </div>
-        <div class="col">
-          <div class="pill">Black prob</div>
-          <div class="progress"><i id="pBlack"></i></div>
-          <span class="tag" id="pBlackTxt">0%</span>
-        </div>
-        <div class="col">
-          <div class="pill">White prob</div>
-          <div class="progress"><i id="pWhite"></i></div>
-          <span class="tag" id="pWhiteTxt">0%</span>
-        </div>
+        <div class="col"><div class="pill">Red prob</div><div class="progress"><i id="pRed"></i></div><span class="tag" id="pRedTxt">0%</span></div>
+        <div class="col"><div class="pill">Black prob</div><div class="progress"><i id="pBlack"></i></div><span class="tag" id="pBlackTxt">0%</span></div>
+        <div class="col"><div class="pill">White prob</div><div class="progress"><i id="pWhite"></i></div><span class="tag" id="pWhiteTxt">0%</span></div>
       </div>
-
       <div style="margin-top:12px" class="kpis">
         <div class="kpi"><div class="v" id="sigTotal">0</div><div class="l">Sinais</div></div>
         <div class="kpi"><div class="v" id="wins">0</div><div class="l">Wins</div></div>
@@ -167,32 +83,51 @@
       </div>
     </section>
 
-    <!-- COL DIREITA -->
+    <!-- DIREITA -->
     <section class="card col">
       <h2>Controle da IA & Configurações</h2>
-      <div class="controls">
-        <div class="row">
-          <div><label class="tag">Modo</label>
-            <select id="mode">
-              <option value="neural">neural</option>
-              <option value="hybrid" selected>hybrid</option>
-              <option value="manual">manual</option>
-            </select>
-          </div>
-          <div><label class="tag">Stake (R$)</label><input id="stake" type="number" step="0.01" min="0.1" value="2.00"/></div>
-          <div><label class="tag">Max Gales</label><input id="gales" type="number" step="1" min="0" value="2"/></div>
+      <div class="row">
+        <div><label class="tag">Modo</label>
+          <select id="mode">
+            <option value="neural">neural</option>
+            <option value="hybrid" selected>hybrid</option>
+            <option value="manual">manual</option>
+          </select>
         </div>
-        <div class="row" style="margin-top:8px">
-          <div><label class="tag">Confluência Cor (min votos x/10)</label><input id="confColor" type="number" step="1" min="1" value="2"/></div>
-          <div><label class="tag">Confluência White (min votos x/10)</label><input id="confWhite" type="number" step="1" min="1" value="2"/></div>
-          <div><label class="tag">Confiança mínima (%)</label><input id="confMin" type="number" step="1" min="50" max="95" value="62"/></div>
+        <div><label class="tag">Stake (R$)</label><input id="stake" type="number" step="0.01" min="0.1" value="2.00"/></div>
+        <div><label class="tag">Max Gales</label><input id="gales" type="number" step="1" min="0" value="2"/></div>
+      </div>
+      <div class="row" style="margin-top:8px">
+        <div><label class="tag">Confluência Cor (min votos x/10)</label><input id="confColor" type="number" step="1" min="1" value="2"/></div>
+        <div><label class="tag">Confluência White (min votos x/10)</label><input id="confWhite" type="number" step="1" min="1" value="2"/></div>
+        <div><label class="tag">Confiança mínima (%)</label><input id="confMin" type="number" step="1" min="50" max="95" value="62"/></div>
+      </div>
+      <div class="row" style="margin-top:12px">
+        <button id="save">Salvar Config</button>
+        <button id="reset" class="ghost">Resetar Histórico</button>
+        <button id="demoFeed" class="ghost">Simular Rodada</button>
+      </div>
+
+      <h2 style="margin-top:18px">Coletor BookWebLear</h2>
+      <div class="row">
+        <div class="col">
+          <label class="tag">URL da fonte</label>
+          <input id="ingUrl" type="text" placeholder="https://.../endpoint"/>
         </div>
-        <div class="row" style="margin-top:12px">
-          <button id="save">Salvar Config</button>
-          <button id="reset" class="ghost">Resetar Histórico</button>
-          <button id="demoFeed" class="ghost">Simular Rodada</button>
+        <div style="width:120px">
+          <label class="tag">Intervalo (s)</label>
+          <input id="ingInt" type="number" min="1" value="3"/>
+        </div>
+        <div style="width:150px">
+          <label class="tag">Status</label>
+          <input id="ingStatus" type="text" disabled value="desligado"/>
         </div>
       </div>
+      <div class="row" style="margin-top:10px">
+        <button id="ingSave">Salvar & Ligar</button>
+        <button id="ingStop" class="ghost">Desligar</button>
+      </div>
+      <div class="tag" id="ingErr" style="margin-top:6px;color:#fda4af"></div>
 
       <div style="margin-top:16px">
         <div class="pill">Sinal Ativo</div>
@@ -204,7 +139,6 @@
       </div>
     </section>
 
-    <!-- HISTÓRICO -->
     <section class="card col" style="grid-column:1 / -1">
       <h2>Histórico de Operações</h2>
       <table>
@@ -216,9 +150,7 @@
 </div>
 
 <script>
-  /* Mesma origem: funciona local e no Render */
-  const API = "";
-
+  const API = ""; // mesma origem
   const $ = (id)=>document.getElementById(id);
   const money = v => "R$ " + (v||0).toFixed(2).replace(".",",");
 
@@ -268,25 +200,23 @@
       $("modeLabel").textContent  = s.config.mode;
       $("stakeLabel").textContent = (s.config.stake||0).toFixed(2);
       $("galesLabel").textContent = s.config.max_gales;
-
       $("sigTotal").textContent = s.metrics.total_signals;
       $("wins").textContent     = s.metrics.wins;
       $("losses").textContent   = s.metrics.losses;
       $("bank").textContent     = money(s.metrics.bank_result);
       $("wrLabel").textContent  = Math.round((s.metrics.winrate||0)*100)+"%";
-
       renderBalls(s.history_tail||[]);
-
-      // barras simples (visual) com base no recorte
       const c10 = s.counts10||{red:0,black:0,white:0,n:1};
       const pr = c10.red/(c10.n||1), pb = c10.black/(c10.n||1), pw = c10.white/(c10.n||1);
       const sum = (pr+pb+pw)||1; const nr = pr/sum, nb = pb/sum, nw = pw/sum;
       const setBar = (id,val,txt)=>{ $(id).style.width = Math.round(val*100)+"%"; $(txt).textContent = Math.round(val*100)+"%"; };
       setBar("pRed", nr, "pRedTxt"); setBar("pBlack", nb, "pBlackTxt"); setBar("pWhite", nw, "pWhiteTxt");
-
       renderSignal(s.active_signal);
       if(s.active_signal && s.active_signal.status==="finished"){ maybeAppendFinished(s.active_signal); }
-
+      // ingest UI
+      $("ingInt").value = s.ingest.interval;
+      $("ingStatus").value = s.ingest.enabled ? (s.ingest.ok ? "ligado ✓" : "erro") : "desligado";
+      $("ingErr").textContent = s.ingest.last_error || "";
       $("apiStatus").textContent = "Online";
     }catch(e){
       $("apiStatus").textContent = "Offline";
@@ -294,7 +224,7 @@
     }
   }
 
-  async function save(){
+  async function saveConfig(){
     const body = {
       mode: $("mode").value,
       stake: parseFloat($("stake").value)||2,
@@ -306,21 +236,36 @@
     const r = await j(`${API}/api/config`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(body)});
     if(r.ok) refresh();
   }
-
-  async function reset(){
+  async function resetAll(){
     const r = await j(`${API}/api/reset`, {method:"POST"});
     if(r.ok){ $("opsBody").innerHTML = ""; lastFinishedId = null; refresh(); }
   }
-
   async function demo(){
     const u = Math.random(); const result = (u<0.45)?"red":(u<0.90)?"black":"white";
     await j(`${API}/api/push_round`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({result})});
     refresh();
   }
 
-  $("save").onclick = save;
-  $("reset").onclick = reset;
+  // Ingest controls
+  async function ingestSave(){
+    const body = {
+      enabled: true,
+      url: $("ingUrl").value.trim(),
+      interval: parseInt($("ingInt").value)||3
+    };
+    const r = await j(`${API}/api/ingest/config`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(body)});
+    if(r.ok){ refresh(); }
+  }
+  async function ingestStop(){
+    const r = await j(`${API}/api/ingest/config`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({enabled:false})});
+    if(r.ok){ refresh(); }
+  }
+
+  $("save").onclick = saveConfig;
+  $("reset").onclick = resetAll;
   $("demoFeed").onclick = demo;
+  $("ingSave").onclick = ingestSave;
+  $("ingStop").onclick = ingestStop;
 
   refresh();
   setInterval(refresh, 1000);
